--- a/login_form/wwwroot/signup.html
+++ b/login_form/wwwroot/signup.html
@@ -15,6 +15,6 @@
         <button type="submit">Register</button>
     </form>
 
-    <p>{message}</p> <!-- Виводимо повідомлення -->
+    <p>{message}</p>
 </body>
 </html>
