--- a/login_form/wwwroot/error.html
+++ b/login_form/wwwroot/error.html
@@ -1,36 +1,3 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 50px;
-        }
-
-        .error-box {
-            padding: 20px;
-            border: 2px solid red;
-            display: inline-block;
-            color: red;
-            font-size: 18px;
-        }
-
-        a {
-            display: block;
-            margin-top: 20px;
-            text-decoration: none;
-            color: blue;
-        }
-    </style>
-</head>
-<body>
-    <div class="error-box">
-        <p>{message}</p>
-    </div>
-    <a href="/login">return to login</a>
-</body>
-</html>
+﻿<div class="alert alert-danger" role="alert">
+    {message}
+</div>
