--- a/login_form/wwwroot/signup.html
+++ b/login_form/wwwroot/signup.html
@@ -1,20 +1,16 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-</head>
-<body>
-    <h2>Sign Up</h2>
-    <form method="post" action="/signup">
-        <label for="login">Username:</label>
-        <input type="text" id="login" name="login" required><br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        <button type="submit">Register</button>
-    </form>
-
-    <p>{message}</p>
-</body>
-</html>
+﻿<div class="row justify-content-center">
+    <div class="col-md-6">
+        <h2>Sign Up</h2>
+        <form method="post" action="/signup">
+            <div class="form-group">
+                <label for="login">Username</label>
+                <input type="text" class="form-control" id="login" name="login" placeholder="Введіть ім’я" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Введіть пароль" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+    </div>
+</div>
